--- a/app/views/components/header.ejs
+++ b/app/views/components/header.ejs
@@ -11,11 +11,11 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link <%= (page == 'about') ? 'active' : ''; %>" aria-current="page" href="/about"><i class="fa-solid fa-circle-info fa-lg"></i> About</a>
+          <a class="nav-link <%= (page == 'aboutMe') ? 'active' : ''; %>" aria-current="page" href="/aboutMe"><i class="fa-solid fa-circle-info fa-lg"></i> About Me</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link <%= (page == 'projects') ? 'active' : ''; %>" aria-current="page" href="/projects"><i class="fa-solid fa-diagram-project fa-lg"></i> Projects</a>
+          <a class="nav-link <%= (page == 'myProjects') ? 'active' : ''; %>" aria-current="page" href="/myProjects"><i class="fa-solid fa-diagram-project fa-lg"></i> My Projects</a>
         </li>
 
         <li class="nav-item">
@@ -23,16 +23,18 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link <%= (page == 'contact') ? 'active' : ''; %>" aria-current="page" href="/contact"><i class="fa-solid fa-envelopes-bulk fa-lg"></i> Contact</a>
+          <a class="nav-link <%= (page == 'contactMe') ? 'active' : ''; %>" aria-current="page" href="/contactMe"><i class="fa-solid fa-envelopes-bulk fa-lg"></i> Contact Me</a>
         </li> 
 
         <!--<%= displayName %>-->
 
-        <% if(displayName){ %>
-
         <li class="nav-item">
-          <a class="nav-link <%= (page == 'movie-list') ? 'active' : ''; %>" aria-current="page" href="/movie-list"><i class="fa-solid fa-table-list fa-lg"></i> Movies List</a>
-        </li> 
+          <a class="nav-link <%= (page == 'business-list') ? 'active' : ''; %>" aria-current="page" href="/business-list"><i class="fa-solid fa-table-list fa-lg"></i> Business List</a>
+        </li>
+
+        <% if(displayName) { %>
+
+         
 
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/logout"><i class="fa-solid fa-right-to-bracket fa-lg"></i> Logout</a>
@@ -44,7 +46,9 @@
           <a class="nav-link <%= (page == 'login') ? 'active' : ''; %>" aria-current="page" href="/login"><i class="fa-solid fa-right-to-bracket fa-lg"></i> Login</a>
         </li> 
         <% } %>
+
       </ul>
     </div>
   </div>
 </nav>
+<img src = "./content/images/f5.jpg" alt ="My Home" width=100% height="300">
