--- a/app/views/content/home.ejs
+++ b/app/views/content/home.ejs
@@ -1,3 +1,40 @@
-<div class="container">
-    <h1><%= title %></h1>
-</div>
+<!--Musa Patiguli 301164030 Assignment 1 Oct 7,2022-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Protected Areas</title>
+<meta charset="utf-8">
+<style>
+b {text-align:center;}
+</style>
+<body bgcolor=beige>
+</head>
+<body>
+<body style="font-family:Verdana">
+
+
+
+<h1>COMP229-Web Application Development (Sec.402) Fall2022</h1>
+<h3>Musa Patiguli</h3>
+<h3>301164030</h3>
+<br><br><br>
+<h3>Welcome to My Portfolio!</h3>
+<b>
+<br><br><br><br><br><br>
+<br>
+
+
+
+
+
+<main>
+
+
+
+<!--Musa Patiguli 301164030-->
+
+
+
+</body>
+</html>
