--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,8 +8,9 @@
     <body>
         <!-- Navigation -->
         <header>
-            <!-- <img src="./content/images/beach.jpg" alt="Beach Picture"> -->
+            
             <%- include('components/header.ejs'); %>
+            <p><img src = "./content/images/MyLogo.jpg" alt ="My Photo"></p>
         </header>
         <!-- Main -->
         <main>
