--- a/app/views/content/contactme.ejs
+++ b/app/views/content/contactme.ejs
@@ -1,9 +1,10 @@
 <!--Musa Patiguli 301164030 Assignment 1 Oct 7,2022-->
 
+
 <html lang="en">
 <head>
 <meta charset="utf-8">
-\
+
 
 <body bgcolor=#DCDCDC>
 </head>
@@ -11,7 +12,7 @@
 
 <header>
 
-<!--Musa Patiguli 301164030-->
+
 </header>
 <nav>
 
@@ -19,7 +20,7 @@
 &nbsp; &nbsp; &nbsp; &nbsp;
 <main>
   <hr>
-<h1>My Services </h1>
+<h1>Contact Me</h1>
 
 <br><br>
 
@@ -27,16 +28,14 @@
 <p><img src="./content/images/Serv.jpg" alt="image"></p>
 
 <p><br><br>
-<ul>
-    <li>Web Design using HTML, CSS, and JavaScript</li><br>
-    <li>SQL database </li><br>
-    <li>Software system design</li><br>
-    <li>Jawa Programming</li><br>
-    <li>C# programminge</li><br>
-    <li>Software requirement Engineering</li><br>
-    <li>Unix/Linux operating sysytem</li><br>
+
+    <h4>My Name: Musa (Fatima) Patigul</h4><br>
+    <h4>Contact Number: 647-777-3468 </h4><br>
+    <h4>Email: <a href = "mailto: mpatigul@my.centennialcollege.ca">mpatigul@my.centennialcollege.ca</a></h4><br>
+    <h4>LinkedIn: <a href="https://www.linkedin.com/in/fatima-musa-13b189177/">https://www.linkedin.com/in/fatima-musa-13b189177/</a></h4><br>
     
-</ul>
+    
+
     
 
 </p>
@@ -51,4 +50,4 @@
 <br><br>
 <small><i>copyfight &copy   Musa Patiguli 301164030 Assignment 1</i></small>
 </footer>
-</body>   
+</body> 
