--- a/app/views/content/movies/list.ejs
+++ b/app/views/content/movies/list.ejs
@@ -1,7 +1,9 @@
 <div class="container">
     <h1>Movie List</h1>
+    <% if(displayName){ %>
     <a href="/movie-add" class="btn btn-primary" role="button">
         <i class="fas fa-plus-circle"></i> Add a Movie</a>
+        <% } %>
     <div class="row">
         <div class="col">
     
@@ -14,8 +16,11 @@
                         <th scope="col">Director</th>
                         <th scope="col">Genre</th>
                         <th scope="col">Runtime</th>
+                        
+                        <% if(displayName){ %>
                         <th></th>
                         <th></th>
+                        <% } %>
                     </tr>
                 </thead>
                 <tbody id="movieList">
